# GameEngine

./: .gitignore  CBuffer.h  CMakeLists.txt  CMakePresets.json  Camera.cpp  Camera.h  D3D11Context.cpp  D3D11Context.h  D3D11Context.hpp  D3D11Window.cpp  D3D11Window.h  D3D11Window.hpp  DrawManger.cpp  DrawManger.h  DrawScreen.cpp  DrawScreen.h  DrawScreenManager.cpp  DrawScreenManager.h  GameObjBox.cpp  GameObjBox.h  IDrawer.cpp  IDrawer.h  Material.cpp  Material.h  MeshFilter.cpp  MeshFilter.h  MeshRender.cpp  MeshRender.h  Pipeline.cpp  Pipeline.h  RenderPass.h  Scene.cpp  Scene.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h  Vertex.h  build.py  main.cpp  (+2 more)
Core/: CBuffer.cpp  CBuffer.h  Camera.cpp  Camera.h  CameraManager.cpp  CameraManager.h  Component.cpp  Component.h  D3D11Context.cpp  D3D11Context.h  DrawManger.cpp  DrawManger.h  DrawScreen.cpp  DrawScreen.h  EffectType.h  FileSystem.cpp  FileSystem.h  GameObject.cpp  GameObject.h  Geometry.cpp  IDrawer.cpp  IDrawer.h  InputControl.cpp  InputControl.h  LoadScence.cpp  LoadScence.h  Material.cpp  Material.h  MeshFilter.cpp  MeshFilter.h  MeshRender.cpp  MeshRender.h  Pipeline.cpp  Pipeline.h  RenderPass.cpp  RenderPass.h  Scene.cpp  Scene.h  Shader.cpp  Shader.h  (+6 more)
Core/Animation/: KeyAnimation.cpp  KeyAnimation.h
Core/Component/: Component.cpp  Component.h  GameObject.cpp  GameObject.h  Transform.cpp  Transform.h
HLSL/: BoneAnimation.hlsli  Shadow.hlsli  basePS.hlsli  baseVS.hlsli  floor.hlsli  light.hlsli  woodCrateBox.hlsli  woodCrateBoxLight.hlsli
HLSL/cortina/: license.txt  scene.gltf
HLSL/curtainset/: license.txt  scene.gltf
Shell/: DrawScreenManager.cpp  DrawScreenManager.h  ShadowMap.cpp  ShadowMap.h  WoodCrateBox.cpp  WoodCrateBox.h  XBoneAnimation.cpp  XBoneAnimation.h  XCameraObject.cpp  XCameraObject.h  XCarAnimation.cpp  XCarAnimation.h  XLight.cpp  XLight.h  XPlane.cpp  XPlane.h  XWoodCrateBox.cpp  XWoodCrateBox.h
Shell/XComponent/: XLightCpt.cpp  XLightCpt.h
Window/: D3D11Window.cpp  D3D11Window.h
